feat: added message fixes
